unpackaged/main/default/objects/Contact_Phone__c/fields/Created_from_Fellow_App__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Fellow_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Fellow App</label>
    <type>Checkbox</type>
</CustomField>