unpackaged/main/default/objects/Contact_Phone__c/fields/DOF_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>DOF_Opt_Out_Date__c</fullName>
    <description>Date phone number was opted out for DOF communications.</description>
    <inlineHelpText>Indicate date phone number was opted out for DOF communications.</inlineHelpText>
    <label>DOF Opt Out Date</label>
    <type>Date</type>
</CustomField>