unpackaged/main/default/objects/Contact_Phone__c/fields/EDF_Action_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_Action_Opt_Out_Date__c</fullName>
    <description>Date phone number was opted out for EDF Action communications.</description>
    <inlineHelpText>Indicate date phone number was opted out for EDF Action communications.</inlineHelpText>
    <label>EDF Action Opt Out Date</label>
    <type>Date</type>
</CustomField>