unpackaged/main/default/objects/Contact_Phone__c/fields/EDF_China_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_China_Opt_in_Date__c</fullName>
    <description>Date phone number was opted in for EDF China communications.</description>
    <inlineHelpText>Indicate date phone number was opted in for EDF China communications.</inlineHelpText>
    <label>EDF China Opt in Date</label>
    <type>Date</type>
</CustomField>