unpackaged/main/default/objects/Contact_Phone__c/fields/EDF_Europe_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_Europe_Opt_in_Date__c</fullName>
    <description>Date phone number was opted in for EDF Europe communications.</description>
    <inlineHelpText>Indicate date phone number was opted in for EDF Europe communications.</inlineHelpText>
    <label>EDF Europe Opt in Date</label>
    <type>Date</type>
</CustomField>