unpackaged/main/default/objects/Contact_Phone__c/fields/EDF_Mexico_Opt_in_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_Mexico_Opt_in_Date__c</fullName>
    <description>Date phone number was opted in for EDF Mexico communications.</description>
    <inlineHelpText>Indicate date phone number was opted in for EDF Mexico communications.</inlineHelpText>
    <label>EDF Mexico Opt in Date</label>
    <type>Date</type>
</CustomField>