unpackaged/main/default/objects/Contact_Phone__c/fields/EDF_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>EDF_Opt_In_Date__c</fullName>
    <description>Date phone number was opted in for EDF communications.</description>
    <inlineHelpText>Indicate date phone number was opted in for EDF communications.</inlineHelpText>
    <label>EDF Opt In Date</label>
    <type>Date</type>
</CustomField>