unpackaged/main/default/objects/Contact_Phone__c/fields/MCAF_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>MCAF_Opt_Out_Date__c</fullName>
    <description>Date phone number was opted out for MCAF communications.</description>
    <inlineHelpText>Indicate date phone number was opted out for MCAF communications.</inlineHelpText>
    <label>MCAF Opt Out Date</label>
    <type>Date</type>
</CustomField>