unpackaged/main/default/objects/Contact_Phone__c/fields/Phone_txt__c.field-meta.xml
<CustomField>
    <fullName>Phone_txt__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone__c, ".", ""),"-",""),"+",""),"(",""),")","")," ","")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>