unpackaged/main/default/objects/Contact_Phone__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whichever phone number is marked OP gets stamped on the contact in the standard phone fields</description>
    <inlineHelpText>The primary, active phone for this contact. Each contact can only have one Overall Preferred phone.</inlineHelpText>
    <label>Overall Preferred</label>
    <type>Checkbox</type>
</CustomField>