unpackaged/main/default/objects/Contact_Phone__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>