unpackaged/main/default/objects/Contact_Phone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Phone number status.</description>
    <inlineHelpText>A Preferred status indicates it's the best phone number of that type and will get copied to the Contact record. Each Contact can only have 1 Preferred phone for each type (eg 1 Preferred home, 1 Preferred mobile). Deliverable indicates it's an active phone number but not preferred for its type. Undeliverable indicates the phone number isn't valid.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
                <default>true</default>
                <label>Preferred</label>
            </value>
            <value>
                <fullName>Deliverable</fullName>
            </value>
            <value>
                <fullName>Undeliverable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>