unpackaged/main/default/objects/Contact_Phone__c/fields/Sys_Copied_to_Personal__c.field-meta.xml
<CustomField>
    <fullName>Sys_Copied_to_Personal__c</fullName>
    <description>Checks if Phone is equal to Home Phone on Contact record.</description>
    <formula>IF( Donor__r.HomePhone =  Phone__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Copied to Personal?</label>
    <type>Checkbox</type>
</CustomField>