unpackaged/main/default/objects/Contact_Phone__c/fields/Sys_Merge_Base_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sys_Merge_Base_Formula__c</fullName>
    <formula>Sys_Merge_Base_Time__c - 1/24 + (5/24/60/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sys-Merge Base Formula</label>
    <type>DateTime</type>
</CustomField>