unpackaged/main/default/objects/Contact_Phone__c/fields/Sys_Merge_Base_Time__c.field-meta.xml
<CustomField>
    <fullName>Sys_Merge_Base_Time__c</fullName>
    <label>Sys-Merge Base Time</label>
    <type>DateTime</type>
</CustomField>