unpackaged/main/default/objects/Contact_Phone__c/validationRules/Cannot_Create_Pref_if_OP_Exists_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_Pref_if_OP_Exists_CP</fullName>
    <active>true</active>
    <description>Prevents creation of a Preferred Phone record if a different OP of the same Type already exists.</description>
    <errorConditionFormula>TEXT (Status__c) = 'Preferred'
&amp;&amp;
Primary__c = FALSE
&amp;&amp;
Is_Automation_Bypassed__c = FALSE
&amp;&amp;
$Permission.Flow_Automations_Off = FALSE
&amp;&amp;
OR (
( TEXT (Type__c) = 'Work' &amp;&amp; TEXT ( Donor__r.npe01__PreferredPhone__c  ) = 'Work' &amp;&amp; Donor__r.npe01__WorkPhone__c!=Phone__c &amp;&amp; NOT(Donor__r.Phone=NULL)),  
( TEXT (Type__c) = 'Home' &amp;&amp; TEXT ( Donor__r.npe01__PreferredPhone__c  ) = 'Home' &amp;&amp; Donor__r.HomePhone!=Phone__c &amp;&amp; NOT(Donor__r.Phone=NULL)),
( TEXT (Type__c) = 'Mobile' &amp;&amp; TEXT ( Donor__r.npe01__PreferredPhone__c  ) = 'Mobile' &amp;&amp; Donor__r.MobilePhone!=Phone__c &amp;&amp; NOT(Donor__r.Phone=NULL)),
( OR (TEXT (Type__c) = 'Other', TEXT (Type__c) = 'Assistant', TEXT (Type__c) = 'Fax') &amp;&amp; TEXT ( Donor__r.npe01__PreferredPhone__c  ) = 'Other' &amp;&amp; Donor__r.OtherPhone!=Phone__c &amp;&amp; NOT(Donor__r.Phone=NULL))
)</errorConditionFormula>
    <errorMessage>You cannot create a Preferred Phone record if an Overall Preferred Phone record of the same Type currently exists.</errorMessage>
</ValidationRule>