unpackaged/main/default/objects/Contact_Phone__c/validationRules/Cant_Have_End_Date_if_Status_Preferred.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Have_End_Date_if_Status_Preferred</fullName>
    <active>true</active>
    <description>Prevents saving of records with End Dates if Status is Preferred.</description>
    <errorConditionFormula>NOT(ISBLANK(End_Date__c)) &amp;&amp;
TEXT( Status__c ) = 'Preferred' &amp;&amp;
ISCHANGED(Status__c) = FALSE</errorConditionFormula>
    <errorMessage>If End Date is populated, Status cannot equal 'Preferred'.</errorMessage>
</ValidationRule>