unpackaged/main/default/objects/Contact_Phone__c/validationRules/Fax_Cannot_be_OP.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Cannot_be_OP</fullName>
    <active>true</active>
    <description>Prevents Fax type CPs from being marked Overall Preferred.</description>
    <errorConditionFormula>TEXT(Type__c) = 'Fax' &amp;&amp;  Primary__c = TRUE</errorConditionFormula>
    <errorMessage>Fax numbers cannot be Overall Preferred.</errorMessage>
</ValidationRule>