unpackaged/main/default/objects/Contact_Phone__c/validationRules/No_Edit_Phone_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Edit_Phone_Value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.Update_Email_or_Phone = FALSE,
NOT(ISNEW()),
ISCHANGED( Phone__c )
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the Phone value on an existing Contact Phone record. Please either create a new record with the updated phone number and mark this record Undeliverable, or submit a Request Case for this change.</errorMessage>
</ValidationRule>