unpackaged/main/default/objects/Contact_Phone__c/validationRules/Overall_Preferred_Must_Be_Preferred_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>Overall_Preferred_Must_Be_Preferred_CP</fullName>
    <active>true</active>
    <description>Prevents records from being marked Overall Preferred while having a Status not equal to Preferred.</description>
    <errorConditionFormula>AND (NOT(ISPICKVAL(Status__c, "Preferred")),
Primary__c = TRUE, $Permission.Flow_Automations_Off = FALSE)</errorConditionFormula>
    <errorMessage>A record cannot be Overall Preferred without having a Status of Preferred.</errorMessage>
</ValidationRule>